# enterprise-rag-platform

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/config/: settings.py
app/embeddings/: README.md  __init__.py  client.py  generate_embeddings.py
app/embeddings/application/: embedding_service.py  provider_factory.py
app/embeddings/domain/: contracts.py  exceptions.py  models.py
app/embeddings/providers/: __init__.py  base_provider.py  dummy_provider.py  registry.py  sentence_transformer_provider.py
app/embeddings/sdk/: __init__.py  models.py
app/embeddings/tests/: test_dummy_provider.py  test_models.py  test_sdk_runtime.py  test_sentence_transformer_provider.py
app/ingestion/: chunker.py  document_loader.py  ingest_pipeline.py
app/retrieval/: search.py
app/utils/: logger.py
app/vectorstore/: load_vectors.py
app/vectorstore/application/: __init__.py  vector_store_service.py
app/vectorstore/domain/: __init__.py  contracts.py  models.py
app/vectorstore/domain/services/: __init__.py  similarity.py
app/vectorstore/tests/: test_memory_repository.py  test_models.py  test_postgres_connection.py  test_postgres_repository.py  test_postgres_schema.py  test_postgres_search.py  test_search.py  test_similarity.py  test_vector_store_service.py
data/: aml_policy.txt  chunks.json  payments_policy.txt  swift_policy.txt
docs/adr/: ADR-001-project-structure.md
docs/journal/: sprint-01.md
examples/: embedding_demo.py
ingestion/: chunker.py  ingest_pipeline.py
scripts/: test_settings.py
(+9 files in other folders)
