[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-rag-platform"
version = "0.1.0"
description = "Enterprise RAG Platform built using local LLMs, pgvector and MLX."
readme = "README.md"
requires-python = ">=3.13"

authors = [
    {name = "Nitin Mahesh"}
]

license = {text = "MIT"}

keywords = [
    "genai",
    "rag",
    "ml",
    "llm",
    "pgvector",
    "mlx",
    "python"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.mypy]
python_version = "3.13"

strict = true

warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true

show_error_codes = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["app"]
